--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,6 +1,6 @@
 .index-main{
     margin-top: 50px;
-    text-align: center;
+    text-align: center !important;
 }
 
 .index-logo{
@@ -32,8 +32,91 @@
     transition: .3s;
 }
 
+.index-buttons{
+    margin-top: 20px;
+}
 
-.index-inovacao:hover .inovacao-arrow{
-    border: 1px solid rgb(0, 201, 0);
-    border-radius: 500px;
+.index-btn{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.btnPrincipal {
+    border-radius: 50px;
+    background-color: #00AE9D;
+    border: none;
+    text-align: center;
+    padding: 16px;
+    width: 160px;
+    color: #ffffff;
+    transition: all 0.5s;
+    cursor: pointer;
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+    display: inline-block;
+    position: relative;
+  }
+
+.btnPrincipal a{
+    padding: 15px 7px;
+  }
+  
+.btnPrincipal:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;  
+    top: 16px;
+    right: -2px;
+    transition: 0.5s;
+  }
+  
+.btnPrincipal:hover{
+    padding-right: 24px;
+    padding-left:8px;
+    background-color: #006e63;
+    box-shadow: 0 5px 15px -8px #006e63;
+  }
+  
+.btnPrincipal:hover:after {
+    opacity: 1;
+    right: 10px;
+  }
+
+.btnSecond{
+    border: 2px solid #FFFFFF;
+    width: 160px;
+    background: none;
+    border-radius: 150px;
+    transition: ease-in .3s;
+    cursor: pointer;
+  }
+
+.btnSecond a{
+    padding: 15px 32px;
+  }
+
+.btnSecond:hover{
+    background-color: #006e63;
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+}
+
+.index-information-container{
+  margin-top: 80px;
+}
+
+.index-information{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+  margin: 30px;
+}
+
+.index-information-separador{
+  display: block;
+  width: 850px;
+  height: 1px;
+  background-color: white; /* ou a cor desejada */
+  margin: 0 auto; /* Isso centraliza horizontalmente */
 }
