--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -90,6 +90,7 @@
     border-radius: 150px;
     transition: ease-in .3s;
     cursor: pointer;
+    padding: 15px;
   }
 
 .btnSecond a{
@@ -117,6 +118,71 @@
   display: block;
   width: 850px;
   height: 1px;
-  background-color: white; /* ou a cor desejada */
+  background-color: rgba(255, 255, 255, 0.35); /* ou a cor desejada */
   margin: 0 auto; /* Isso centraliza horizontalmente */
+}
+
+.index-ramal-container{
+  margin-top: 120px;
+}
+
+.index-ramal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 200px;
+}
+
+.index-ramais-buttons{
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.ramais{
+  color: rgb(0,205,185);
+  color: linear-gradient(144deg, rgba(0,205,185,1) 0%, rgba(255,255,255,1) 100%);
+}
+
+.index-ti-container{
+  padding: 80px;
+  background-color: rgba(0, 0, 0, 0.468);
+  margin-top: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.ti-li{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.ti-separador{
+  display: block;
+  width: 450px;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.16); /* ou a cor desejada */
+}
+
+.ti-img{
+  padding: 50px;
+  border: 3px solid rgba(255, 255, 255, 0.189);
+  border-radius: 10px;
+}
+
+.tiBtn{
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #00AE9D;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.tiBtn:hover{
+  background-color: #007d70;
 }
