--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
 }
 
 body{
-    background-color: #000000;
+    background: rgb(0,0,0);
+    background: linear-gradient(144deg, rgba(0,0,0,1) 0%, rgba(0,85,102,1) 100%) no-repeat;
 }
 
 a{
