--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -186,3 +186,80 @@
 .tiBtn:hover{
   background-color: #007d70;
 }
+
+.apresentacao-sistema{
+  text-align: center;
+}
+
+.apresentacao-container{
+  margin-top: 120px;
+}
+
+.apresentacao-items{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+  margin-top: 35px;
+}
+
+.apresentação-i-contorno-left{
+  background-color: rgba(255, 255, 255, 0.189);
+  padding: 20px 50px 20px 50px;
+  border-radius: 20px 0px 0px 20px;
+  width: 260px;
+  transition: .3s;
+}
+
+.apresentação-i-contorno-left:hover{
+  padding: 25px 55px 25px 55px;
+}
+
+.apresentação-i{
+  background-color: rgba(255, 255, 255, 0.189);
+  padding: 20px 50px 20px 50px;
+  width: 260px;
+  transition: .3s;
+}
+
+.apresentação-i:hover{
+  padding: 25px 55px 25px 55px;
+}
+
+.apresentação-i-contorno-right{
+  background-color: rgba(255, 255, 255, 0.189);
+  padding: 20px 50px 20px 50px;
+  border-radius: 0px 20px 20px 0px;
+  width: 260px;
+  transition: .3s;
+}
+
+.apresentação-i-contorno-right:hover{
+  padding: 25px 55px 25px 55px;
+}
+
+.links-container{
+  margin-top: 150px;
+  text-align: center;
+}
+
+.links-items{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.found-icons{
+  color: grey;
+  /* background: rgb(46,46,46);
+  background: linear-gradient(180deg, rgba(46,46,46,1) 0%, rgba(0,0,0,1) 100%); */
+  font-size: 25px;
+}
+
+@media(max-width: 890px){
+  .ramalimg{
+    display: none;
+  }
+}
