--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -258,6 +258,12 @@
   font-size: 25px;
 }
 
+@media(max-width: 1024px){
+  .apresentação-i-contorno-right, .apresentação-i, .apresentação-i-contorno-left{
+    padding: 10px 40px 10px 10px;
+  }
+}
+
 @media(max-width: 890px){
   .ramalimg{
     display: none;
