--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 /* CSS PAGES */
 @import url(assets/styles/index.css);
 @import url(assets/styles/ramais.css);
+@import url(assets/styles/cadastro.css);
 @import url(assets/styles/fonts/fonts.css);
 
 
