--- a/assets/styles/ramais.css
+++ b/assets/styles/ramais.css
@@ -4,14 +4,19 @@
   margin: 30px 10px 20px 10px;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
-/* topo | direita | inferior | esquerda */
+
+.ramal-card-container{
+  width: 330px;
+}
+
 .ramal-top{
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: #00AE9D;
-  padding: 10px;
+  padding: 20px;
   border-radius: 10px 10px 0px 0px;
 }
 
